| Bug #12669 | CHECKSUM TABLE locks the InnoDB table, and does not use a consistent read | ||
|---|---|---|---|
| Submitted: | 19 Aug 2005 10:48 | Modified: | 6 Oct 2005 17:35 |
| Reporter: | Heikki Tuuri | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S3 (Non-critical) |
| Version: | 4.1.13 | OS: | Any (All) |
| Assigned to: | Bugs System | Target Version: | |
[19 Aug 2005 10:48]
Heikki Tuuri
[19 Aug 2005 10:51]
Heikki Tuuri
Shane: "Looks like running a CHECKSUM sets a TL_READ_NO_INSERT on that table. This is a more strict lock than a simple READ, as concurrent inserts aren't allowed either."
[19 Sep 2005 17:19]
Heikki Tuuri
Raising the severity of this feature request / bug.
[26 Sep 2005 14:23]
Jan Lindström
This bug is on MySQL code but I will have a look of this. It this is easy to fix I will fix it. Otherwise, someone from MySQL have to fix this. Changed category to MySQL Server.
[27 Sep 2005 10:43]
Jan Lindström
I will fix this bug in InnoDB code because fixing this in MySQL code would be bigger change. I start with 5.0.x. Heikki, should this bug be fixed also in 4.1?
[27 Sep 2005 13:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30371
[27 Sep 2005 15:23]
Heikki Tuuri
Jan, we should fix this in 4.1, too. Heikki
[28 Sep 2005 12:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30429
[28 Sep 2005 13:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30431
[29 Sep 2005 7:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30483
[30 Sep 2005 9:28]
Jan Lindström
Fixed on 4.1.15 and InnoDB part fixed on 5.0.14.
[6 Oct 2005 17:35]
Paul DuBois
Noted in 4.1.15, 5.0.14 changelogs.
