Fixed a bug checksum table locks the InnoDB table and does not use a consistent read (Bug #12669). This fixes InnoDB part of the bug.

mysql-test/r/innodb.result:
  Added results for a checksum test.
mysql-test/t/innodb.test:
  Addeed a test case for a checksum bug #12669.
sql/ha_innodb.cc:
  Use consistent read for checksum table.